# okta-cli

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGES.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.dev.txt  requirements.in  requirements.txt  run.py  setup.py  tox.ini
oktacli/: __init__.py  api.py  cli.py  exceptions.py  okta.py  pwgen.py
src/oktacli/: cli.py  exceptions.py
src/oktacli/dotted/: collection.py  utils.py
testdata/: mock_users_0010.csv  mock_users_0025.csv  mock_users_1000.csv  mock_users_one.csv
tests/: test_cli_groups.py  test_cli_raw.py  test_cli_users.py  test_collection.py  test_dict_conversion.py  test_helpers.py  testdata.py  testprep.py
tools/: import-wordlist.py
